<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="0dp" >

        <ImageView
            android:id="@+id/rew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="rew"
            android:src="@drawable/rew" />

        <ImageView
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:onClick="play"
            android:src="@drawable/play" />

        <ImageView
            android:id="@+id/pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-42dp"
            android:onClick="pause"
            android:src="@drawable/pause"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/ff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:onClick="ff"
            android:src="@drawable/ff" />

        <TextView
            android:id="@+id/nb_track"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp"
            android:gravity="center"
            android:text="@string/nb_track" />
    </LinearLayout>

    <TextView
        android:id="@+id/track"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:marqueeRepeatLimit="-1"
        android:singleLine="true"
        android:text="@string/track"
        android:textColor="#33b5e5"
        android:textSize="15sp" />

    <SeekBar
        android:id="@+id/timeprogress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:max="100"
        android:progress="0" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/current"
            android:textColor="#33b5e5" />

        <TextView
            android:id="@+id/remaining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="203dp"
            android:text="@string/remaining"
            android:textColor="#33b5e5" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/cover"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/loop_off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:onClick="loop"
                android:src="@drawable/off" />

            <ImageView
                android:id="@+id/loop_on"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="-40dp"
                android:onClick="loop"
                android:src="@drawable/on"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/loop_t"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="-30dp"
                android:text="@string/loop"
                android:textSize="8sp" />

            <ImageView
                android:id="@+id/shuffle_off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:onClick="shuffle"
                android:src="@drawable/off" />

            <ImageView
                android:id="@+id/shuffle_on"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="-40dp"
                android:onClick="shuffle"
                android:src="@drawable/on"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/shuffle_t"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="-30dp"
                android:text="@string/shuffle"
                android:textSize="8sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/artist"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/artist"
        android:textColor="#33b5e5"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/album"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/album"
        android:textColor="#33b5e5"
        android:textSize="15sp" />

</LinearLayout>