<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp" >

        <ImageView
            android:id="@+id/rew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="rew"
            android:src="@drawable/rew" />

        <ImageView
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:onClick="play"
            android:src="@drawable/play" />

        <ImageView
            android:id="@+id/pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-42dp"
            android:onClick="pause"
            android:src="@drawable/pause"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/ff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:onClick="ff"
            android:src="@drawable/ff" />

        <TextView
            android:id="@+id/nb_track"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.39"
            android:text="0/0" />
    </LinearLayout>

    <TextView
        android:id="@+id/artist"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/artist"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:textColor="#33b5e5"
        android:textSize="40sp"
        android:singleLine="true"
        android:ellipsize="end" />

    <TextView
        android:id="@+id/album"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/album"
        android:layout_marginLeft="20dp"
        android:textColor="#33b5e5"
        android:textSize="25sp"
        android:singleLine="true"
        android:ellipsize="end"
       
         />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/cover"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp" />

        <ImageView
            android:id="@+id/loop_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/off"
			android:onClick="loop" />

        <ImageView
            android:id="@+id/loop_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-55dp"
            android:layout_marginTop="10dp"
            android:onClick="loop"
            android:src="@drawable/on"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/loop_t"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-30dp"
            android:layout_marginTop="20dp"
            android:textSize="8sp"
            android:text="@string/loop" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/timeprogress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:max="100"
        android:progress="0"
		android:thumb="@drawable/seek_thumb" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current"
            android:textColor="#33b5e5"
            android:layout_marginLeft="20dp" />

        <TextView
            android:id="@+id/remaining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remaining"
            android:textColor="#33b5e5"
            android:layout_marginLeft="203dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/track"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/track"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:textColor="#33b5e5"
        android:textSize="20sp"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:focusable="true" 
android:focusableInTouchMode="true" 
        android:marqueeRepeatLimit="-1"
         />

</LinearLayout>